fix dropdown menu align

--- a/src/components/Dropdown/styles.module.scss
+++ b/src/components/Dropdown/styles.module.scss
@@ -13,7 +13,7 @@
 
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 
     min-width: 200px;
     min-height: 55px;
@@ -33,6 +33,10 @@
         margin-right: 1rem;
     }
 
+}
+
+.space_between {
+    justify-content: space-between;
 }
 
 .content {
