--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -12,7 +12,7 @@
   }
 
   span {
-    margin-left: auto;
+    
     text-transform: capitalize;
   }
 
